<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menumain_showFinished">Show Finished</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About TaskTimer</string>
    <string name="menumain_generate">Generate data</string>
    <string name="no_task_message">No Task Selected.</string>
    <string name="edit_button_description">Button to edit task details.</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_name">Task Name</string>
    <string name="addedit_des">Task Description</string>
    <string name="addedit_sort_order">Task Priority</string>
    <string name="addedit_button_save">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks. 0 is the highest priority.
        Each task has edit, delete, finish buttons to update, delete task, or mark the task as finished.
        \n\nUse the checked button (v) in the toolbar above to view all finished tasks.
        Each task has restore and delete buttons to mark the task as unfinished or delete task.
        \n\nUse the sort button in the toolbar above to sort tasks. </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Are you sure that you want to delete unfinished task %1$s?</string>
    <string name="menutitle_sort">sort</string>
    <string name="menutitle_sort_by_name">Sort by Name</string>
    <string name="menutitle_sort_by_priority">Sort by Priority</string>
    <string name="menutitle_sort_by_creating_time">Sort by Creating Time</string>
    <string name="title_activity_list_finished">ListFinishedActivity</string>
    <string name="no_finished_task">"No finished tasks"</string>
</resources>
