<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.xzhang1234.tasktimer.ListFinishedActivity">
    <item
        android:id="@+id/menu_list_finished_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="102"
        android:title="@string/menutitle_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_list_finished_sort_by_creating_time"
                android:title="@string/menutitle_sort_by_creating_time" />
            <item
                android:id="@+id/menu_list_finished_sort_by_name"
                android:title="@string/menutitle_sort_by_name" />
            <item
                android:id="@+id/menu_list_finished_sort_by_priority"
                android:title="@string/menutitle_sort_by_priority" />
        </menu>
    </item>
</menu>
